syntax = "proto3";

option csharp_namespace = "PlatformService.Protos";

import "platformModels.proto";

service GrpcPlatform {
  rpc GetAllPlatform(GetAllPlatformRequest) returns (GetAllPlatformResponse);
}